# serverless-ml-course

./: .gitignore  iris_end_to_end_pipeline.py  pyproject.toml
